--- a/Sdk/src/main/res/drawable/dashed_line.xml
+++ b/Sdk/src/main/res/drawable/dashed_line.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
     <stroke
-        android:color="#7F7D83"
+        android:color="#E3E3E3"
         android:dashWidth="5dp"
         android:dashGap="5dp"
         android:width="1dp"/>
