added the check of payment

--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -328,7 +328,7 @@
                             android:id="@+id/deliveryAddressConstraintLayout"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             android:background="@drawable/cardview_bg"
                             android:paddingBottom="16dp">
 
