--- a/Sdk/src/main/res/layout/fragment_bnpl_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_bnpl_bottom_sheet.xml
@@ -141,7 +141,7 @@
                                 android:visibility="gone"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="@+id/loading_relative_layout"
-                                app:layout_constraintTop_toBottomOf="@+id/checkingTextView"
+                                app:layout_constraintTop_toBottomOf="parent"
                                 app:layout_goneMarginBottom="8dp"
                                 tools:itemCount="10"
                                 tools:listitem="@layout/wallet_item" />
