--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -327,7 +327,7 @@
                             android:id="@+id/deliveryAddressConstraintLayout"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:background="@drawable/cardview_bg"
                             android:paddingBottom="16dp">
 
@@ -376,16 +376,22 @@
                                 app:layout_constraintTop_toBottomOf="@+id/dashedLine4" />
 
                             <TextView
-                                android:id="@+id/nameTextView"
+                                android:id="@+id/nameAndMobileTextViewMain"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="12dp"
                                 android:layout_marginTop="12dp"
+                                android:paddingEnd="8dp"
+                                android:ellipsize="end"
+                                android:maxLines="1"
                                 android:fontFamily="@font/poppins_medium"
                                 android:text="Person Name"
                                 android:textColor="#010102"
+                                app:layout_constrainedWidth="true"
                                 app:layout_constraintStart_toEndOf="@id/homeIcon"
-                                app:layout_constraintTop_toBottomOf="@+id/dashedLine4" />
+                                app:layout_constraintTop_toBottomOf="@+id/dashedLine4"
+                                app:layout_constraintEnd_toStartOf="@id/right_arrow"
+                                app:layout_constraintHorizontal_bias="0.03"/>
 
                             <ImageView
                                 android:id="@+id/right_arrow"
@@ -398,25 +404,6 @@
                                 app:layout_constraintTop_toBottomOf="@id/dashedLine4" />
 
                             <TextView
-                                android:id="@+id/mobileNumberTextViewMain"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:fontFamily="@font/poppins_medium"
-                                android:maxLines="1"
-                                android:paddingStart="4dp"
-                                android:paddingEnd="4dp"
-                                android:text="(+911234567890)"
-                                android:textColor="#010102"
-                                app:layout_constrainedWidth="true"
-                                app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
-                                app:layout_constraintEnd_toStartOf="@id/right_arrow"
-                                app:layout_constraintHorizontal_bias="0.13"
-                                app:layout_constraintStart_toEndOf="@+id/nameTextView"
-                                app:layout_constraintTop_toTopOf="@+id/nameTextView"
-                                app:layout_constraintVertical_bias="2.0" />
-
-                            <TextView
                                 android:id="@+id/addressTextViewMain"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -426,8 +413,8 @@
                                 android:textColor="#7F7D83"
                                 android:textSize="12sp"
                                 android:textStyle="bold"
-                                app:layout_constraintStart_toStartOf="@+id/nameTextView"
-                                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
+                                app:layout_constraintStart_toStartOf="@+id/nameAndMobileTextViewMain"
+                                app:layout_constraintTop_toBottomOf="@+id/nameAndMobileTextViewMain" />
 
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
