--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -912,7 +912,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="16dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="0dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -927,7 +927,8 @@
                             android:background="#FFFFFF"
                             android:paddingTop="12dp"
                             android:paddingEnd="12dp"
-                            android:paddingBottom="12dp">
+                            android:paddingBottom="12dp"
+                            android:visibility="visible">
 
                             <ImageView
                                 android:id="@+id/imageView17"
