--- a/Sdk/src/main/res/drawable/custom_radio_unchecked.xml
+++ b/Sdk/src/main/res/drawable/custom_radio_unchecked.xml
@@ -1,4 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" />
-    <corners android:radius="1000dp"/>
-</shape>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M8,1L8,1A7,7 0,0 1,15 8L15,8A7,7 0,0 1,8 15L8,15A7,7 0,0 1,1 8L1,8A7,7 0,0 1,8 1z"
+      android:strokeWidth="2"
+      android:fillColor="#ffffff"
+      android:strokeColor="#DCDCDE"/>
+</vector>
