--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -445,6 +445,96 @@
                         app:layout_constraintTop_toBottomOf="@+id/cardView8" />
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/recommendedCardView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginEnd="16dp"
+                        android:visibility="gone"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="0dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView12">
+
+                        <LinearLayout
+                            android:id="@+id/recommendedLinearLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:visibility="visible"
+                            android:weightSum="1">
+
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/recomendedConstraint"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="#FFFFFF"
+                                android:paddingTop="12dp"
+                                android:paddingEnd="12dp"
+                                android:paddingBottom="12dp">
+
+                                <ImageView
+                                    android:id="@+id/recomendedImage"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="12dp"
+                                    android:layout_marginTop="2dp"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:srcCompat="@drawable/ic_recommended" />
+
+                                <TextView
+                                    android:id="@+id/recomendedText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="6dp"
+                                    android:fontFamily="@font/poppins"
+                                    android:text="Recommended"
+                                    android:textColor="#1D1D1D"
+                                    android:textSize="16sp"
+                                    app:layout_constraintBottom_toBottomOf="@+id/recomendedImage"
+                                    app:layout_constraintStart_toEndOf="@+id/recomendedImage"
+                                    app:layout_constraintTop_toTopOf="@+id/recomendedImage" />
+
+                                <ImageView
+                                    android:id="@+id/recomendedArrow"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    app:layout_constraintBottom_toBottomOf="@+id/recomendedImage"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toTopOf="@+id/recomendedImage"
+                                    app:srcCompat="@drawable/rightarrow" />
+
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+
+                            <LinearLayout
+                                android:id="@+id/recomendedOptionsLinearLayout"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:background="@android:color/white"
+                                android:orientation="vertical"
+                                android:visibility="gone"
+                                android:weightSum="2">
+
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/recomendedRecyclerView"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:paddingStart="16dp"
+                                    android:paddingEnd="16dp"
+                                    android:scrollbars="vertical" />
+
+                            </LinearLayout>
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/cardView4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -456,7 +546,7 @@
                         app:cardElevation="0dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView12">
+                        app:layout_constraintTop_toBottomOf="@+id/recommendedCardView">
 
                         <LinearLayout
                             android:id="@+id/upiLinearLayout"
@@ -490,7 +580,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="6dp"
-                                    android:fontFamily="@font/poppins_semibold"
+                                    android:fontFamily="@font/poppins"
                                     android:text="UPI"
                                     android:textColor="#1D1D1D"
                                     android:textSize="16sp"
@@ -541,7 +631,7 @@
                                 android:layout_weight="1"
                                 android:background="@android:color/white"
                                 android:orientation="vertical"
-                                android:visibility="visible"
+                                android:visibility="gone"
                                 android:weightSum="2">
 
                                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -1197,38 +1287,6 @@
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
 
-                    <LinearLayout
-                        android:id="@+id/linearLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="120dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="120dp"
-                        android:gravity="center"
-                        android:visibility="visible"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/cardView9">
-
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:fontFamily="@font/poppins_medium"
-
-                            android:text="Secured by "
-                            android:textColor="#888888"
-                            android:textSize="12sp" />
-
-                        <ImageView
-                            android:id="@+id/imageView4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:src="@drawable/boxpay_copyright" />
-
-                    </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <RelativeLayout
@@ -1261,6 +1319,85 @@
                 </RelativeLayout>
             </FrameLayout>
         </androidx.core.widget.NestedScrollView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/recommendedProceedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            android:visibility="gone"
+            app:cardCornerRadius="7dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            tools:ignore="NotSibling">
+
+            <RelativeLayout
+                android:id="@+id/recommendedProceedButtonRelativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_bg"
+                android:padding="12dp">
+
+                <ProgressBar
+                    android:id="@+id/progress"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_centerInParent="true"
+                    android:indeterminateDrawable="@drawable/loader_01"
+                    android:rotation="90"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/proceedtext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Proceed"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="120dp"
+            android:gravity="center"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recommendedProceedButton"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:fontFamily="@font/poppins_medium"
+
+                android:text="Secured by "
+                android:textColor="#888888"
+                android:textSize="12sp" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/boxpay_copyright" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
