--- a/Sdk/src/main/res/layout/fragment_payment_failure_screen.xml
+++ b/Sdk/src/main/res/layout/fragment_payment_failure_screen.xml
@@ -81,12 +81,15 @@
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="16dp"
                 android:layout_marginTop="12dp"
+                android:paddingEnd="16dp"
                 android:fontFamily="@font/poppins"
                 android:gravity="center"
                 android:text="error message"
-                android:textColor = "#595E6A"
+                android:textColor="#595E6A"
                 android:textSize="16sp"
+                app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toEndOf="@+id/imageView9"
                 app:layout_constraintStart_toStartOf="@+id/imageView9"
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
