--- a/Sdk/src/main/res/layout/order_summary_item.xml
+++ b/Sdk/src/main/res/layout/order_summary_item.xml
@@ -86,7 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:fontFamily="@font/poppins_semibold"
+                android:fontFamily="@font/inter_semibold"
                 android:textColor="#010102"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
