--- a/app/src/main/res/layout/activity_merchant_details_screen.xml
+++ b/app/src/main/res/layout/activity_merchant_details_screen.xml
@@ -18,6 +18,18 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
+    <EditText
+        android:id="@+id/shopperTokenEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:hint="Enter Shopper Token"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/editTextText"
+        tools:ignore="TouchTargetSizeCheck" />
+
     <Spinner
         android:id="@+id/environmentSpinner"
         android:layout_width="wrap_content"
@@ -27,7 +39,7 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/editTextText"
         app:layout_constraintStart_toStartOf="@+id/editTextText"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/shopperTokenEditText"
         tools:ignore="TouchTargetSizeCheck" />
 
     <androidx.appcompat.widget.AppCompatButton
