--- a/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
@@ -153,14 +153,14 @@
                                 android:layout_marginTop="5dp"
                                 android:background="@drawable/edittext_bg">
 
-                                <AutoCompleteTextView
+                                <com.boxpay.checkout.sdk.adapters.InstantAutoComplete
                                     android:id="@+id/spinner_dial_codes"
-                                    android:layout_width="60dp"
+                                    android:layout_marginStart="4dp"
+                                    android:layout_width="50dp"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
                                     android:background="#ffffffff"
                                     android:textSize="14sp"
-                                    android:paddingStart="4dp"
                                     android:inputType="number"
                                     tools:ignore="TouchTargetSizeCheck" />
 
@@ -259,7 +259,7 @@
                                 android:text="Country*"
                                 android:textColor="@android:color/black"/>
 
-                            <AutoCompleteTextView
+                            <com.boxpay.checkout.sdk.adapters.InstantAutoComplete
                                 android:id="@+id/countryEditText"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -276,10 +276,22 @@
                                 tools:ignore="TouchTargetSizeCheck" />
 
                             <TextView
+                                android:id="@+id/countryErrorText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="2dp"
+                                android:fontFamily="@font/poppins"
+                                android:gravity="center_vertical"
+                                android:lineSpacingExtra="-1sp"
+                                android:text="Required"
+                                android:visibility="invisible"
+                                android:textColor="#ffff4d4f"/>
+
+                            <TextView
                                 android:id="@+id/postalCodeTextView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="26dp"
+                                android:layout_marginTop="2dp"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
                                 android:lineSpacingExtra="-1sp"
