--- a/Sdk/src/main/res/layout/custom_dial_code_item.xml
+++ b/Sdk/src/main/res/layout/custom_dial_code_item.xml
@@ -3,5 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="16sp"
-    android:padding="10dp"
+    android:paddingTop="5dp"
     android:textColor="#000000" />
