--- a/Sdk/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Sdk/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Payment Details"
+            android:text="Payment Methods"
             android:textColor="#2D2B32"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
