--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -157,9 +157,11 @@
                                 android:layout_marginTop="8dp"
                                 android:layout_marginEnd="14dp"
                                 android:visibility="visible"
+                                android:scrollbars="vertical"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/numberOfItems"
+                                app:layout_constraintHeight_max="200dp"
                                 tools:itemCount="1"
                                 tools:listitem="@layout/order_summary_item" />
 
