--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -102,7 +102,7 @@
                             android:layout_height="match_parent"
                             android:background="@drawable/cardview_bg"
                             android:paddingTop="8dp"
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:paddingBottom="8dp">
 
                             <TextView
@@ -310,11 +310,16 @@
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
-                    <ScrollView
-                        android:id="@+id/scrollview"
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/scrollCard"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="visible"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginTop="16dp"
+                        android:visibility="gone"
+                        android:background="@android:color/white"
+                        app:cardCornerRadius="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/cardView3">
@@ -323,8 +328,14 @@
                             android:id="@+id/container"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical" />
-                    </ScrollView>
+                            android:orientation="vertical"
+                            android:paddingStart="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingBottom="16dp"
+                            android:paddingEnd="16dp"/>
+
+
+                    </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView8"
@@ -459,7 +470,7 @@
                         android:textColor="#0A090B"
                         android:visibility="visible"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/scrollview" />
+                        app:layout_constraintTop_toBottomOf="@+id/scrollCard" />
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/recommendedCardView"
