--- a/Sdk/src/main/res/layout/spinner_dial_codes.xml
+++ b/Sdk/src/main/res/layout/spinner_dial_codes.xml
@@ -5,6 +5,6 @@
     android:textSize="12sp"
     android:layout_width="match_parent"
     android:fontFamily="@font/poppins"
-    android:paddingStart="0dp"
+    android:paddingStart="4dp"
     android:paddingEnd="0dp"
-    android:layout_height="?android:attr/listPreferredItemHeightSmall"/>
+    android:layout_height="40dp"/>
