added the check for the shopper details visibility and editable

--- a/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -97,6 +97,8 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/edittext_bg"
                             android:fontFamily="@font/poppins"
+                            android:layout_marginStart="2dp"
+                            android:layout_marginEnd="2dp"
                             android:gravity="center_vertical"
                             android:hint="Please enter name on your card"
                             android:inputType="text"
@@ -246,6 +248,8 @@
                                 android:paddingStart="12dp"
                                 android:paddingTop="8dp"
                                 android:paddingEnd="60dp"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:paddingBottom="8dp"
                                 android:textColor="#000000"
                                 android:textColorHint="#7F7D83"
@@ -354,6 +358,8 @@
                                     android:background="@drawable/white_bg_edittext"
                                     android:fontFamily="@font/poppins"
                                     android:gravity="center_vertical"
+                                    android:layout_marginStart="2dp"
+                                    android:layout_marginEnd="2dp"
                                     android:hint="XXXX XXXX XXXX XXXX"
                                     android:inputType="number"
                                     android:maxLength="19"
