--- a/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
@@ -104,6 +104,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
+                            android:layout_marginStart="2dp"
+                            android:layout_marginEnd="2dp"
                             android:background="@drawable/edittext_bg"
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
@@ -151,6 +153,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:background="@drawable/edittext_bg">
 
                                 <com.boxpay.checkout.sdk.adapters.InstantAutoComplete
@@ -220,6 +224,8 @@
                                 android:background="@drawable/edittext_bg"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:hint="Email address"
                                 android:inputType="text"
                                 android:padding="8dp"
@@ -267,6 +273,8 @@
                                 android:background="@drawable/edittext_bg"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:hint="Country"
                                 android:inputType="text"
                                 android:padding="8dp"
@@ -306,6 +314,8 @@
                                 android:background="@drawable/edittext_bg"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:hint="ZIP/Postal Code"
                                 android:inputType="number"
                                 android:padding="8dp"
@@ -346,6 +356,8 @@
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
                                 android:hint="State"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:inputType="text"
                                 android:padding="8dp"
                                 android:textColor="#000000"
@@ -386,6 +398,8 @@
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
                                 android:hint="City"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:inputType="text"
                                 android:padding="8dp"
                                 android:textColor="#000000"
@@ -426,6 +440,8 @@
                                 android:gravity="center_vertical"
                                 android:hint="House number, Apartment "
                                 android:inputType="text"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:padding="8dp"
                                 android:textColor="#000000"
                                 android:textColorHint="#7F7D83"
@@ -481,6 +497,8 @@
                                 android:hint="Area, Colony, Street, Sector"
                                 android:inputType="text"
                                 android:padding="8dp"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginEnd="2dp"
                                 android:textColor="#000000"
                                 android:textColorHint="#7F7D83"
                                 android:textSize="14sp"
