--- a/Sdk/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -102,6 +102,8 @@
                         android:iconifiedByDefault="false"
                         android:queryBackground="@null"
                         android:textColor="#000000"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginEnd="2dp"
                         android:queryHint="Search Wallets"
                         android:searchIcon="@drawable/searchicon"
                         app:layout_constraintEnd_toEndOf="parent"
