updated the icons

--- a/Sdk/src/main/res/drawable/upi_icon_2.xml
+++ b/Sdk/src/main/res/drawable/upi_icon_2.xml
@@ -1,16 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M11.631,20.895L16.777,2.748L21.409,11.975L11.631,20.895Z"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#2D2B32"/>
-  <path
-      android:pathData="M3.276,20.895L8.422,2.748L13.053,11.975L3.276,20.895Z"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#2D2B32"/>
+    android:width="20dp"
+    android:height="21dp"
+    android:viewportWidth="20"
+    android:viewportHeight="21">
+  <group>
+    <clip-path
+        android:pathData="M1,1h18v18h-18z"/>
+    <path
+        android:pathData="M9.579,17.061L13.564,3.012L17.149,10.156L9.579,17.061Z"
+        android:strokeWidth="1.35"
+        android:fillColor="#00000000"
+        android:strokeColor="#1D1D1D"/>
+    <path
+        android:pathData="M3.313,17.061L7.297,3.012L10.882,10.156L3.313,17.061Z"
+        android:strokeWidth="1.35"
+        android:fillColor="#00000000"
+        android:strokeColor="#1D1D1D"/>
+  </group>
 </vector>
