--- a/Sdk/src/main/res/drawable/ic_bnpl.xml
+++ b/Sdk/src/main/res/drawable/ic_bnpl.xml
@@ -1,13 +1,37 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="21dp"
-    android:viewportWidth="24"
-    android:viewportHeight="23">
-
-    <path
-        android:fillColor="#00000000"
-        android:strokeColor="#1D1D1D"
-        android:strokeWidth="2"
-        android:pathData="M18.731 13.9786C18.7048 14.6071 18.9405 15.2095 19.3857 15.6548C19.8309 16.1 20.4333 16.3357 21.0357 16.3357H23V18.1429C23 18.9024 22.3976 19.5048 21.6381 19.5048H6.13333C5.37381 19.5048 4.77143 18.9024 4.77143 18.1429V12.1976C7.20714 12.1976 9.19762 10.2071 9.19762 7.77143H21.6381C21.6643 7.77143 21.6643 7.77143 21.6905 7.77143C22.4238 7.79762 23 8.4 23 9.13333V11.7524H21.0619C19.8048 11.7524 18.7833 12.7476 18.731 13.9786ZM21.4548 6.33095C21.3238 5.59762 20.6167 5.1 19.8833 5.23095L9.25 7.11667H21.6119L21.4548 6.33095ZM23 12.4333C22.3714 12.4333 21.7429 12.4333 21.0881 12.4333C20.1714 12.4071 19.4119 13.1405 19.3857 14.0048C19.3595 14.9214 20.119 15.7333 21.0881 15.7071H23V12.4333ZM8.54286 7.77143C8.54286 9.86667 6.84048 11.5429 4.77143 11.5429C2.70238 11.5429 1 9.86667 1 7.77143C1 5.67619 2.70238 4 4.77143 4C6.84048 4 8.54286 5.70238 8.54286 7.77143ZM5.42619 5.85952C5.42619 5.49286 5.13809 5.20476 4.77143 5.20476C4.40476 5.20476 4.11667 5.49286 4.11667 5.85952V7.11667H3.12143C2.75476 7.11667 2.46667 7.40476 2.46667 7.77143C2.46667 8.1381 2.75476 8.42619 3.12143 8.42619H4.77143C5.13809 8.42619 5.42619 8.1381 5.42619 7.77143V5.85952Z" />
-
+    android:width="21dp"
+    android:height="20dp"
+    android:viewportWidth="21"
+    android:viewportHeight="20">
+  <path
+      android:pathData="M2.5,7.75H17.5M5.5,11.25H8M4,4.25H16C17.104,4.25 18,5.145 18,6.249L18,13.751C18,14.855 17.104,15.75 16,15.75L4,15.75C2.896,15.75 2,14.854 2,13.75L2,6.25C2,5.145 2.895,4.25 4,4.25Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#2D2B32"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M16,7m-4.5,0a4.5,4.5 0,1 1,9 0a4.5,4.5 0,1 1,-9 0"
+      android:fillColor="#ffffff"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M16,5.16V7.001L17.534,7.922"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#2D2B32"
+      android:strokeLineCap="round"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M18.147,6.08H19.682V4.546"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#2D2B32"
+      android:strokeLineCap="round"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M18.316,9.455C17.834,9.91 17.228,10.213 16.574,10.326C15.921,10.439 15.248,10.356 14.641,10.089C14.034,9.822 13.519,9.382 13.16,8.824C12.802,8.266 12.616,7.614 12.625,6.951C12.635,6.288 12.84,5.642 13.214,5.095C13.589,4.547 14.116,4.122 14.731,3.873C15.346,3.623 16.02,3.56 16.67,3.692C17.32,3.824 17.917,4.144 18.386,4.613C18.838,5.071 19.211,5.502 19.682,6.08"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#2D2B32"
+      android:strokeLineCap="round"/>
 </vector>
