--- a/Sdk/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -73,7 +73,7 @@
                         android:id="@+id/imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/netbanking_logo"
+                        android:src="@drawable/netbanking"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
