added the loader and completed the animation

--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -779,6 +779,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    android:layout_marginTop="6dp"
                                     android:paddingBottom="12dp"
                                     android:visibility="gone">
 
